--- a/classwork/ex01.html
+++ b/classwork/ex01.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Tech - Zhi Li</title>
-</head>
-<body>
-    <p>Something</p>
+  </head>
 
-    <h1>sdfsdfsdfsdf</h1>
-    
-</body>
+  <body>
+    <h1>All about Zhi Li</h1>
+    <hr />
+    <p>
+      I teach at Babson College and I like working with data. Lorem ipsum, dolor
+      sit amet consectetur adipisicing elit. Voluptates ex repellat
+      reprehenderit eos illum quia enim tempora ipsa sequi officia, ipsam ea
+      voluptatem magnam quo assumenda ducimus quaerat mollitia voluptas.
+    </p>
+    <p>
+      My favorite sport is basketball. Let's go, Celtics! (& Warriors!) Lorem
+      ipsum dolor sit, amet consectetur adipisicing elit. Debitis, laboriosam
+      totam placeat distinctio dignissimos minima suscipit velit cupiditate sint
+      quibusdam aliquid voluptatem sunt repudiandae neque ducimus magni. Alias
+      mollitia magnam a ad dolores error neque eaque. Ab fugit possimus quae.
+      Soluta, quas quasi, quos, atque sequi veniam id accusantium incidunt vel
+      nesciunt similique debitis dignissimos odit ullam ea aspernatur fugiat sed
+      ipsa quod asperiores alias magni. Quasi quod tempore maxime, illum, soluta
+      iusto labore obcaecati quaerat nulla reiciendis, voluptatum dicta porro
+      repellat impedit nesciunt. Explicabo dolorem quis odio molestiae harum
+      reprehenderit corporis vel atque molestias, sit repudiandae dignissimos
+      illum porro!
+    </p>
+    <hr />
+  </body>
 </html>
