finish index, sitemap

--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
   </head>
 
   <body>
+    <a id="top"></a>
     <h1>All about Zhi Li</h1>
     <img src="images/ZhiLi.jpg" height="300" alt="Myself">
-    <h2>Contact Info</h2>
+    <h2>Contact Information</h2>
+    <p>
+      <a href="mailto:zli@babson.edu">Email me</a>
+    </p>
 
     <hr />
     <p>
-      I teach at Babson College and I like working with data. Lorem ipsum, dolor
+      I teach at <a href="https://www.babson.edu/" target="_blank">Babson</a> College and I like working with data. Lorem ipsum, dolor
       sit amet consectetur adipisicing elit. Voluptates ex repellat
       reprehenderit eos illum quia enim tempora ipsa sequi officia, ipsam ea
       voluptatem magnam quo assumenda ducimus quaerat mollitia voluptas.
@@ -38,5 +42,8 @@
       height="300"
       />
     <hr />
+
+    <p><a href="sitemap.html">Sitemap</a></p>
+    <a href="#top">Return to Top</a>
   </body>
 </html>
