--- a/ex01.html
+++ b/ex01.html
@@ -33,7 +33,7 @@
       illum porro!
     </p>
     <img
-      src="https://cdn.cnn.com/cnnnext/dam/assets/190726183616-soccer-ball-stock-large-169.jpg"
+      src="https://upload.wikimedia.org/wikipedia/commons/2/27/Stephen_Curry_Shooting_%28cropped%29.jpg"
       alt="Steph Curry"
       height="300"
       />
