--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   <body>
     <a id="top"></a>
     <h1>All about Zhi Li</h1>
-    <img src="images/ZhiLi.jpg" height="300" alt="Myself">
+    <img
+      src="images/ZhiLi.jpg"
+      height="300"
+      alt="Myself"
+      title="Zhi's profile photo"
+    />
     <h2>Contact Information</h2>
     <p>
       <a href="mailto:zli@babson.edu">Email me</a>
@@ -17,10 +22,12 @@
 
     <hr />
     <p>
-      I teach at <a href="https://www.babson.edu/" target="_blank">Babson</a> College and I like working with data. Lorem ipsum, dolor
-      sit amet consectetur adipisicing elit. Voluptates ex repellat
-      reprehenderit eos illum quia enim tempora ipsa sequi officia, ipsam ea
-      voluptatem magnam quo assumenda ducimus quaerat mollitia voluptas.
+      I teach at
+      <a href="https://www.babson.edu/" target="_blank">Babson</a> College and I
+      like working with data. Lorem ipsum, dolor sit amet consectetur
+      adipisicing elit. Voluptates ex repellat reprehenderit eos illum quia enim
+      tempora ipsa sequi officia, ipsam ea voluptatem magnam quo assumenda
+      ducimus quaerat mollitia voluptas.
     </p>
     <p>
       My favorite sport is basketball. Let's go, Celtics! (& Warriors!) Lorem
@@ -37,10 +44,10 @@
       illum porro!
     </p>
     <img
-      src="https://cdn.cnn.com/cnnnext/dam/assets/190726183616-soccer-ball-stock-large-169.jpg"
+      src="https://upload.wikimedia.org/wikipedia/commons/2/27/Stephen_Curry_Shooting_%28cropped%29.jpg"
       alt="Steph Curry"
       height="300"
-      />
+    />
     <hr />
 
     <p><a href="sitemap.html">Sitemap</a></p>
