--- a/lec07-css-demo-2.html
+++ b/lec07-css-demo-2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Demo 2</title>
 
-    <link rel="stylesheet" href="styles/ex2.css" type="text/css" />
+    <link rel="stylesheet" href="styles/lec7-1.css" type="text/css" />
   </head>
 
   <body>
