--- a/lec06-demo.html
+++ b/lec06-demo.html
@@ -20,10 +20,13 @@
         font-family: 'Tangerine';
         font-size: xx-large;
       }
+      /* some new CSS to do something */
     </style>
   </head>
   <body>
     <h1 class="bordered">Lorem ipsum dolor sit</h1>
+
+    <!-- comments here -->
     <p>
       Lorem <span class="second-word">ipsum</span>, dolor sit amet consectetur adipisicing elit. Iure non eos
       neque voluptatum molestias hic culpa, ratione, alias facilis esse eaque
