--- a/ex07-1.html
+++ b/ex07-1.html
@@ -3,37 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSS Demo</title>
-    <style>
-      body {
-        background-color: yellow;
-      }
+    <title>CSS Exercise 1</title>
+    <style type="text/css">
       h1 {
         text-align: center;
-        font-family: impact;
+        font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
         font-size: 36pt;
-        color: red;
       }
+
       h2 {
-        font-family: arial;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-size: 24pt;
         color: blue;
+        font-style: italic;
       }
+
       p {
-        font-family: verdana;
-        text-indent: 50px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 12pt;
+        text-indent: 20px;
+        line-height: 1.5em;
       }
     </style>
   </head>
+
   <body>
     <h1>This is a header of type h1</h1>
     <h2>This is a header of type h2</h2>
     <hr />
     <p>
-      This is a <span>paragraph</span>. I've tried to make it long enough to
-      scroll onto a second line. If it's still too short, please resize your
-      window so that you can observe whether or not it's indented properly.
+      This is a paragraph. I've tried to make it long enough to scroll onto a
+      second line. If it's still two short, please resize your window so that
+      you can observe whether or not it's indented properly.
     </p>
-    <p>This should be a bordered paragraph, but I did not add border yet.</p>
+    <p style="background-color:lime; font-size: 18pt;">
+      This is the second paragraph. Note that it has exactly the same style as
+      the first paragraph. You will need to learn how to use in-line styles or
+      tag ids if you want this paragraph to be formatted differently from the
+      one above.
+    </p>
   </body>
 </html>
